# img-opt-web

./: .gitignore  .gitmodules  README.md  bun.lockb  package.json  pnpm-lock.yaml  renovate.json  svelte.config.js  tsconfig.json  vite.config.ts  webp.c
.github/workflows/: build.yaml  pages-deployment.yaml
src/: app.html
src/lib/: a.out.d.ts  a.out.js  a.out.wasm  webp.worker.ts
src/lib/components/EncodingOptions/: EncodingOptions.svelte
src/lib/components/FileInput/: FileInput.svelte
src/lib/components/ImagePreview/: ImagePreview.svelte
src/lib/components/QualityControl/: QualityControl.svelte
src/lib/components/WebpEncoder/: WebpEncoder.svelte  types.ts
src/lib/utils/: formatters.ts
src/routes/: +page.svelte
static/: a.out.js  a.out.wasm
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs
